Fixed social links alignment and colours

--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 	}
 
 	#top_img {
-		width: 90%;
+		width: 100%;
 		height: auto;
 	}
 
@@ -36,11 +36,17 @@
 	}
 	
 	h1 {
-		font-size: 20px;
 		color: #339933;
 	}
+	
+	#content {
+		padding: 5px;
+	}
+	
+	#social_div {
+	}
 
-}
+} /* end of mobile section */
 
 /* For Desktops */
 @media only screen and (min-width: 768px) {
@@ -111,6 +117,9 @@ p {
 	width: 80%;
 }
 
+} /* end of desktop section */
+
+
 #social_div {
 	list-style: none;
 }
@@ -118,4 +127,40 @@ p {
 a {
 	text-decoration: none;
 }
+
+a:visited {
+	color: black;
+}
+
+.social_links {
+	margin: 0px;
+	margin-top: 3px;
+	width: 250px;
+	padding: 2px;
+	display: block;
+	height: 40px;
+	border: 2px solid #339933;
+	text-align: left;
+	display: flex;
+	color: black;
+	align-items: center;
+	justify-content: center;
+}
+
+#facebook_logo {
+	width: 10%;
+	height: auto;
+	padding-right: 3px;
+}
+
+.social_links:hover {
+	background-color: #d9f2d9;
+}
+
+.social_links:active {
+	background-color: #b3e5b3;
+}
+
+#email_div {
+	font-size: 13px;
 }
